# bazel-mac-issue-isatty

./: .gitignore
coreos_etcd_client/: BUILD.bazel  WORKSPACE
coreos_etcd_client/helper/: BUILD.bazel  lock_etcd.go  lock_etcd_test.go
events-not-defined/: BUILD.bazel  WORKSPACE  lib.ts  package.json
http-cluster-does-not-work/: WORKSPACE  package.json
http-cluster-does-not-work/server/: BUILD.bazel  cluster.js  http.js  lib.js  server.js
nixos/: BUILD.bazel  WORKSPACE  nixos_test.go  shell.nix
test-issue/: BUILD.bazel  WORKSPACE
test-issue/reproducible/: BUILD.bazel  color.go
