# gazelle:exclude vendor
# gazelle:exclude node_modules

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

#
# Golang
#

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "external",
    extra_args = [
        "-build_file_name",
        "BUILD.bazel",
    ],
    prefix = "github.com/kalbasit/bazel-reproducible/nixos",
)

#
# Typescript
#

exports_files([
    "tsconfig.json",
    "package.json",
])

#
# Tools
#

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

go_library(
    name = "go_default_library",
    srcs = ["nixos.go"],
    importpath = "github.com/kalbasit/bazel-reproducible/nixos",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["nixos_test.go"],
    embed = [":go_default_library"],
)
