load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["color.go"],
    importpath = "github.com/publica-project/platform/src/reproducible",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/fatih/color:go_default_library"],
)

go_binary(
    name = "reproducible",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
